[gd_scene load_steps=5 format=3 uid="uid://orlmmjxt1l6i"]

[ext_resource type="Texture2D" uid="uid://btf6mtpv3kbye" path="res://tiles/cell-hex.png" id="1_aqh8d"]
[ext_resource type="Script" path="res://tiles/tile_selector.gd" id="1_hh6m2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_loh05"]
radius = 9.05539

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6004"]
size = Vector2(14.0365, 7)

[node name="Tile" type="Node2D"]
script = ExtResource("1_hh6m2")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_aqh8d")

[node name="Area" type="Area2D" parent="."]

[node name="HexFace" type="CollisionPolygon2D" parent="Area"]
polygon = PackedVector2Array(0, -13, 16, -5, 16, 6, 0, 14, -17, 6, -17, -5)

[node name="HexVertexN" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_loh05")

[node name="HexVertexNW" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2(-17, -6)
shape = SubResource("CircleShape2D_loh05")

[node name="HexEdgeNW" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2(-8, -9)
rotation = -0.460767
shape = SubResource("RectangleShape2D_s6004")

[node name="HexEdgeNE" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2(8, -9)
rotation = 0.461172
shape = SubResource("RectangleShape2D_s6004")

[node name="HexEdgeW" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2(-17, 0)
rotation = -1.5708
shape = SubResource("RectangleShape2D_s6004")

[connection signal="mouse_entered" from="Area" to="." method="_on_mouse_entered"]
